Add Open Graph/Twitter meta tags + CNAME for gottapoop.phillipclapham.com
- Added og:image, og:url, og:image dimensions/alt for social sharing
- Added Twitter Card tags (summary_large_image)
- Created CNAME file for custom domain deployment
- Social preview will show gameplay.png when shared on LinkedIn, Twitter, Discord, Slack

Ready for GitHub Pages deployment to https://gottapoop.phillipclapham.com

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
       content="ASCII roguelike dungeon crawler with a comedic twist"
     />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gottapoop.phillipclapham.com" />
+    <meta property="og:image" content="https://gottapoop.phillipclapham.com/screenshots/gameplay.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="660" />
+    <meta property="og:image:alt" content="The Descent: Code Brown gameplay - ASCII roguelike dungeon crawler" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="The Descent: Code Brown" />
+    <meta name="twitter:description" content="ASCII roguelike dungeon crawler with a comedic twist. Manage your desperation, fight enemies, and reach the bathroom before it's too late!" />
+    <meta name="twitter:image" content="https://gottapoop.phillipclapham.com/screenshots/gameplay.png" />
 
     <title>The Descent: Code Brown</title>
     <!-- Google Fonts: VT323 (Authentic Terminal Font) -->
