Add poop emoji favicon 💩
- Created SVG favicon with 💩 emoji
- Added favicon link to index.html head
- Perfect thematic touch for the game

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <meta name="twitter:image" content="https://gottapoop.phillipclapham.com/screenshots/gameplay.png" />
 
     <title>The Descent: Code Brown</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
     <!-- Google Fonts: VT323 (Authentic Terminal Font) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
