Add desktop/keyboard requirement notices
- README: Added notice after 'Play Now' section
- Intro modal: Added keyboard requirement before controls note
- Sidebar: Added yellow desktop notice at top with styling
- Sets proper expectations for mobile users
- Mobile support planned for future Phase 5

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <main>
       <!-- Controls Sidebar -->
       <aside class="controls-sidebar">
+        <div class="desktop-notice">
+          ⌨️ Desktop/Keyboard Required
+        </div>
         <h2>Controls</h2>
 
         <div class="controls-section">
