--- a/index.html
+++ b/index.html
@@ -14,21 +14,33 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gottapoop.phillipclapham.com" />
-    <meta property="og:image" content="https://gottapoop.phillipclapham.com/screenshots/gameplay.png" />
+    <meta
+      property="og:image"
+      content="https://gottapoop.phillipclapham.com/screenshots/gameplay.png"
+    />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="660" />
-    <meta property="og:image:alt" content="The Descent: Code Brown gameplay - ASCII roguelike dungeon crawler" />
+    <meta
+      property="og:image:alt"
+      content="The Descent: Code Brown gameplay - ASCII roguelike dungeon crawler"
+    />
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="The Descent: Code Brown" />
-    <meta name="twitter:description" content="ASCII roguelike dungeon crawler with a comedic twist. Manage your desperation, fight enemies, and reach the bathroom before it's too late!" />
-    <meta name="twitter:image" content="https://gottapoop.phillipclapham.com/screenshots/gameplay.png" />
+    <meta
+      name="twitter:description"
+      content="ASCII roguelike dungeon crawler with a comedic twist. Manage your desperation, fight enemies, and reach the bathroom before it's too late!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://gottapoop.phillipclapham.com/screenshots/gameplay.png"
+    />
 
     <title>The Descent: Code Brown</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
 
     <!-- Google Fonts: VT323 (Authentic Terminal Font) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -52,9 +64,7 @@
     <main>
       <!-- Controls Sidebar -->
       <aside class="controls-sidebar">
-        <div class="desktop-notice">
-          ⌨️ Desktop/Keyboard Required
-        </div>
+        <div class="desktop-notice">⌨️ Desktop/Keyboard Required</div>
         <h2>Controls</h2>
 
         <div class="controls-section">
@@ -137,9 +147,7 @@
 
     <!-- Story Button -->
     <div class="story-button-container">
-      <button id="view-story-btn" class="story-button">
-        📖 View Story
-      </button>
+      <button id="view-story-btn" class="story-button">📖 View Story</button>
     </div>
 
     <!-- Footer -->
@@ -147,9 +155,12 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>About</h3>
-          <p>A comedic ASCII roguelike dungeon crawler</p>
-          <p>Descend through procedurally generated floors</p>
-          <p>Fight enemies, manage desperation, reach the bathroom!</p>
+          <p>A comedic ASCII roguelike dungeon crawler.</p>
+          <p>Descend through procedurally generated floors.</p>
+          <p>
+            Fight enemies, manage desperation, reach the bathroom before it's
+            too late!
+          </p>
         </div>
 
         <div class="footer-section">
@@ -163,8 +174,8 @@
           <h3>Credits</h3>
           <p>
             Developed by
-            <a href="https://phillipclapham.com" target="_blank"
-              >Phill Clapham</a
+            <a href="https://github.com/phillipclapham/" target="_blank"
+              >Phillip Clapham</a
             >
           </p>
           <p>
@@ -174,15 +185,17 @@
             >
           </p>
           <p>
-            <a href="https://github.com/anthropics/claude-code" target="_blank"
-              >View on GitHub</a
+            <a
+              href="https://github.com/phillipclapham/the-descent-code-brown"
+              target="_blank"
+              >View the game on GitHub</a
             >
           </p>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2025 Phill Clapham | A zero-pressure fun project</p>
+        <p>&copy; 2025 Phillip Clapham | A zero-pressure fun project</p>
       </div>
     </footer>
 
@@ -197,12 +210,14 @@
       import { IntroModal } from "./src/intro-modal.js";
 
       // Wire up "View Story" button
-      document.getElementById('view-story-btn').addEventListener('click', () => {
-        const modal = new IntroModal();
-        modal.forceShow(() => {
-          // Do nothing on dismiss - just close modal
+      document
+        .getElementById("view-story-btn")
+        .addEventListener("click", () => {
+          const modal = new IntroModal();
+          modal.forceShow(() => {
+            // Do nothing on dismiss - just close modal
+          });
         });
-      });
     </script>
 
     <!-- Main Game -->
