--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           <p>A comedic ASCII roguelike dungeon crawler.</p>
           <p>Descend through procedurally generated floors.</p>
           <p>
-            Fight enemies, manage desperation, reach the bathroom before it's
-            too late!
+            Fight enemies, manage desperation, reach the bathroom before Code
+            Brown!
           </p>
         </div>
 
