--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           <p>A comedic ASCII roguelike dungeon crawler.</p>
           <p>Descend through procedurally generated floors.</p>
           <p>
-            Fight enemies, manage desperation, reach the bathroom before Code
-            Brown!
+            Fight enemies, manage desperation, reach the bathroom before the
+            code brown!
           </p>
         </div>
 
