--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           <p>A comedic ASCII roguelike dungeon crawler.</p>
           <p>Descend through procedurally generated floors.</p>
           <p>
-            Fight enemies, manage desperation, reach the bathroom before the
-            code brown!
+            Fight enemies, manage desperation, reach the bathroom before you
+            need a change of pants!
           </p>
         </div>
 
@@ -179,7 +179,7 @@
             >
           </p>
           <p>
-            Built with
+            Built in collaboration with
             <a href="https://claude.com/claude-code" target="_blank"
               >Claude Code</a
             >
@@ -195,7 +195,10 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2025 Phillip Clapham | A zero-pressure fun project</p>
+        <p>
+          &copy; 2025 Phillip Clapham | A zero-pressure fun love letter to the
+          games of my youth
+        </p>
       </div>
     </footer>
 
