--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <p>A comedic ASCII roguelike dungeon crawler.</p>
           <p>Descend through procedurally generated floors.</p>
           <p>
-            Fight enemies, manage desperation, reach the bathroom before you
+            Fight enemies, manage desperation and reach the bathroom before you
             need a change of pants!
           </p>
         </div>
