--- a/index.html
+++ b/index.html
@@ -177,12 +177,8 @@
               >Phillip Clapham</a
             >
           </p>
-          <p>
-            Built in collaboration with
-            <a href="https://claude.com/claude-code" target="_blank"
-              >Claude Code</a
-            >
-          </p>
+          <p>Inspired by</p>
+          <p>Nethack | Dungeon Crawl Stone Soup | Brogue</p>
           <p>
             <a
               href="https://github.com/phillipclapham/the-descent-code-brown"
