--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <h3>Credits</h3>
           <p>
             Developed by
-            <a href="https://github.com/phillipclapham/" target="_blank"
+            <a href="https://phillipclapham.com/" target="_blank"
               >Phillip Clapham</a
             >
           </p>
@@ -191,8 +191,11 @@
 
       <div class="footer-bottom">
         <p>
-          &copy; 2025 Phillip Clapham | A zero-pressure fun love letter to the
-          games of my youth
+          &copy; 2025
+          <a href="https://phillipclapham.com/" target="_blank"
+            >Phillip Clapham</a
+          >. All rights reserved. A fun love letter to the classic roguelike
+          games of my youth.
         </p>
       </div>
     </footer>
