--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
           &copy; 2025
           <a href="https://phillipclapham.com/" target="_blank"
             >Phillip Clapham</a
-          >. All rights reserved. A fun love letter to the classic roguelike
-          games of my youth.
+          >. All rights reserved. A fun love letter to the classic roguelike and
+          terminal games of my youth.
         </p>
       </div>
     </footer>
